initial commit: ported to java 21