@@ -1,6 +1,6 @@
 package com.allendowney.thinkdast;
 
-//import static org.junit.Assert.*;
+import static org.junit.Assert.*;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.fail;
 import static org.hamcrest.CoreMatchers.*;
@@ -28,9 +28,9 @@ public class MyArrayListTest {
 	@Before
 	public void setUp() throws Exception {
 		list = new ArrayList<Integer>();
-		list.add(1);
-		list.add(2);
-		list.add(3);
+		list.add(Integer.valueOf(1));
+		list.add(Integer.valueOf(2));
+		list.add(Integer.valueOf(3));
 
 		mylist = new MyArrayList<Integer>();
 		mylist.addAll(list);
@@ -50,10 +50,10 @@ public class MyArrayListTest {
 	@Test
 	public void testAddT() {
 		for (int i = 4; i < 20; i++) {
-			mylist.add(i);
+			mylist.add(Integer.valueOf(i));
 		}
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(18), is(new Integer(19)));
+		assertThat(mylist.get(Integer.valueOf(18)), is(19));
 	}
 
 	/**
@@ -63,7 +63,7 @@ public class MyArrayListTest {
 	public void testAddIntT() {
 		mylist.add(1, 5);
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(1), is(new Integer(5)));
+		assertThat(mylist.get(Integer.valueOf(1)), is(5));
 		assertThat(mylist.size(), is(4));
 
 		try {
@@ -78,11 +78,11 @@ public class MyArrayListTest {
 
 		mylist.add(0, 6);
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(0), is(6));
+		assertThat(mylist.get(Integer.valueOf(0)), is(6));
 
 		mylist.add(5, 7);
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(5), is(new Integer(7)));
+		assertThat(mylist.get(Integer.valueOf(5)), is(7));
 	}
 
 	/**
@@ -94,7 +94,7 @@ public class MyArrayListTest {
 		mylist.addAll(list);
 		mylist.addAll(list);
 		assertThat(mylist.size(), is(12));
-		assertThat(mylist.get(5), is(new Integer(3)));
+		assertThat(mylist.get(Integer.valueOf(5)), is(3));
 	}
 
 	/**
@@ -111,8 +111,8 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testContains() {
-		assertThat(mylist.contains(1), equalTo(true));
-		assertThat(mylist.contains(4), equalTo(false));
+		assertThat(mylist.contains(Integer.valueOf(1)), equalTo(true));
+		assertThat(mylist.contains(Integer.valueOf(4)), equalTo(false));
 		assertThat(mylist.contains(null), equalTo(false));
 		mylist.add(null);
 		assertThat(mylist.contains(null), equalTo(true));
@@ -131,7 +131,7 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testGet() {
-		assertThat(mylist.get(1), is(new Integer(2)));
+		assertThat(mylist.get(Integer.valueOf(1)), is(2));
 	}
 
 	/**
@@ -171,9 +171,9 @@ public class MyArrayListTest {
 	@Test
 	public void testIterator() {
 		Iterator<Integer> iter = mylist.iterator();
-		assertThat(iter.next(), is(new Integer(1)));
-		assertThat(iter.next(), is(new Integer(2)));
-		assertThat(iter.next(), is(new Integer(3)));
+		assertThat(iter.next(), is(1));
+		assertThat(iter.next(), is(2));
+		assertThat(iter.next(), is(3));
 		assertThat(iter.hasNext(), equalTo(false));
 	}
 
@@ -182,8 +182,8 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testLastIndexOf() {
-		mylist.add(2);
-		assertThat(mylist.lastIndexOf(new Integer(2)), is(3));
+		mylist.add(Integer.valueOf(2));
+		assertThat(mylist.lastIndexOf(2), is(3));
 	}
 
 	/**
@@ -191,25 +191,25 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testRemoveObject() {
-		boolean flag = mylist.remove(new Integer(2));
+		boolean flag = mylist.remove(Integer.valueOf(2));
 		assertThat(flag, equalTo(true));
 		assertThat(mylist.size(), is(2));
-		assertThat(mylist.get(1), is(new Integer(3)));
+		assertThat(mylist.get(Integer.valueOf(1)), is(3));
 		//System.out.println(Arrays.toString(mal.toArray()));
-
-		flag = mylist.remove(new Integer(1));
+//
+		flag = mylist.remove(Integer.valueOf(1));
 		assertThat(flag, equalTo(true));
 		assertThat(mylist.size(), is(1));
-		assertThat(mylist.get(0), is(new Integer(3)));
+		assertThat(mylist.get(Integer.valueOf(0)), is(3));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
-		flag = mylist.remove(new Integer(5));
+		flag = mylist.remove(Integer.valueOf(5));
 		assertThat(flag, equalTo(false));
 		assertThat(mylist.size(), is(1));
-		assertThat(mylist.get(0), is(new Integer(3)));
+		assertThat(mylist.get(Integer.valueOf(0)), is(3));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
-		flag = mylist.remove(new Integer(3));
+		flag = mylist.remove(Integer.valueOf(3));
 		assertThat(flag, equalTo(true));
 		assertThat(mylist.size(), is(0));
 		//System.out.println(Arrays.toString(mal.toArray()));
@@ -221,9 +221,9 @@ public class MyArrayListTest {
 	@Test
 	public void testRemoveInt() {
 		Integer val = mylist.remove(1);
-		assertThat(val, is(new Integer(2)));
+		assertThat(val, is(2));
 		assertThat(mylist.size(), is(2));
-		assertThat(mylist.get(1), is(new Integer(3)));
+		assertThat(mylist.get(Integer.valueOf(1)), is(3));
 	}
 
 	/**
@@ -241,19 +241,19 @@ public class MyArrayListTest {
 	@Test
 	public void testSet() {
 		Integer val = mylist.set(1, 5);
-		assertThat(val, is(new Integer(2)));
+		assertThat(val, is(2));
 
 		val = mylist.set(0, 6);
-		assertThat(val, is(new Integer(1)));
+		assertThat(val, is(1));
 
 		val = mylist.set(2, 7);
-		assertThat(val, is(new Integer(3)));
+		assertThat(val, is(3));
 
 		// return value should be 2
 		// list should be [6, 5, 7]
-		assertThat(mylist.get(0), is(new Integer(6)));
-		assertThat(mylist.get(1), is(new Integer(5)));
-		assertThat(mylist.get(2), is(new Integer(7)));
+		assertThat(mylist.get(Integer.valueOf(0)), is(6));
+		assertThat(mylist.get(Integer.valueOf(1)), is(5));
+		assertThat(mylist.get(Integer.valueOf(2)), is(7));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
 		try {
@@ -282,7 +282,7 @@ public class MyArrayListTest {
 	public void testSubList() {
 		mylist.addAll(list);
 		List<Integer> sub = mylist.subList(1, 4);
-		assertThat(sub.get(1), is(new Integer(3)));
+		assertThat(sub.get(Integer.valueOf(1)), is(3));
 	}
 
 	/**
@@ -291,7 +291,7 @@ public class MyArrayListTest {
 	@Test
 	public void testToArray() {
 		Object[] array = mylist.toArray();
-		assertThat((Integer)array[0], is(new Integer(1)));
+		assertThat((Integer)array[0], is(1));
 	}
 
 }
